Se añaden las dependencias necesarias para el log.